<resources>
    <string name="app_name">AssetControl</string>
    <string name="app_milestone">Milestone13</string>
    <string name="action_settings">Configuración</string>
    <string name="title_activity_login">Ingresar</string>
    <string name="download_db_required_and_no_connection">Descarga de base de datos necesaria y no hay conexión</string>
    <string name="title_activity_settings">Configuración</string>
    <string name="pref_header_data_sync">Datos y sincronización</string>
    <string name="NFC_is_disabled">NFC está desactivado</string>
    <string name="NFC_is_enabled">NFC está activado</string>
    <string name="_0">0</string>
    <string name="ellipsis">…</string>
    <string name="could_not_send_pending_data">No se pudieron enviar datos pendientes. Vuelva a intentar más adelante.
    </string>
    <string name="rule_content">Contenido de la regla</string>
    <string name="invalid_client_data">Datos de cliente inválidos</string>
    <string name="to_move">A mover</string>
    <string name="active">Activo</string>
    <string name="asset">Activo fijo</string>
    <string name="add">Agregar</string>
    <string name="error_when_copying_database">Error al copiar la base de datos</string>
    <string name="information">Información</string>
    <string name="update">Actualizado</string>
    <string name="add_observations">Agregar observaciones</string>
    <string name="add_modify_asset">Alta o modificación de activos</string>
    <string name="add_modify_category">Alta o modificación de categorías</string>
    <string name="add_modify_warehouse">Alta o modificación de depósitos</string>
    <string name="add_modify_area">Alta o modificación de áreas</string>
    <string name="previous">Anterior</string>
    <string name="attribute">Atributo</string>
    <string name="barcode_failure">No se ha capturado ningún código de barras</string>
    <string name="barcode_success">Código de barras leído con éxito</string>
    <string name="search_asset">Buscar activo</string>
    <string name="search_category">Buscar categoría</string>
    <string name="search_by_category">Buscar por categoría…</string>
    <string name="search_warehouse">Buscar depósito</string>
    <string name="search_area">Buscar área</string>
    <string name="search_by_area">Buscar por área…</string>
    <string name="search_by_code">Buscar por código…</string>
    <string name="search_by_code_description_ean">Buscar por código, descripción, EAN…</string>
    <string name="button_1">Button 1</string>
    <string name="button_10">Button 10</string>
    <string name="button_11">Button 11</string>
    <string name="button_12">Button 12</string>
    <string name="button_13">Button 13</string>
    <string name="button_2">Button 2</string>
    <string name="button_3">Button 3</string>
    <string name="button_4">Button 4</string>
    <string name="button_5">Button 5</string>
    <string name="button_6">Button 6</string>
    <string name="button_7">Button 7</string>
    <string name="button_8">Button 8</string>
    <string name="button_9">Button 9</string>
    <string name="code">Código</string>
    <string name="change_status">Cambiar estado</string>
    <string name="cancel">Cancelar</string>
    <string name="modify">Modificar</string>
    <string name="quantity">Cantidad</string>
    <string name="parent_cat">Cat. padre</string>
    <string name="category">Categoría</string>
    <string name="parent_category">Categoría padre</string>
    <string name="code_read">Lectura de códigos</string>
    <string name="collector_type">Tipo de colector</string>
    <string name="condition">Condición</string>
    <string name="confirm">Confirmar</string>
    <string name="an_error_occurred_while_trying_to_add_the_item">Ha ocurrido un error al intentar agregar el ítem
    </string>
    <string name="dacosys_logo">Dacosys logo</string>
    <string name="warehouse">Depósito</string>
    <string name="description_code_or_asset_ean">Descripción, código o EAN del activo</string>
    <string name="rule_description">Descripción de la regla</string>
    <string name="asset_description">Descripción del activo</string>
    <string name="description">Descripción</string>
    <string name="detail">Detalle</string>
    <string name="do_you_want_to_remove_the_item">¿Desea quitar el ítem %s?</string>
    <string name="download_data">Dercargar datos</string>
    <string name="ean">EAN</string>
    <string name="delete">Eliminar</string>
    <string name="error_registry">Registro de errores</string>
    <string name="st_">Est.</string>
    <string name="status">Estado</string>
    <string name="manufacturer">Fabricante</string>
    <string name="missing">Faltantes</string>
    <string name="date">Fecha</string>
    <string name="sign">Firmar</string>
    <string name="save">Guardar</string>
    <string name="assets_catalog">Catálogo de activos</string>
    <string name="areas_catalog">Catálogo de áreas</string>
    <string name="invalid_code">Código inválido</string>
    <string name="mac_address">MAC Address</string>
    <string name="mant">Mant.</string>
    <string name="model">Modelo</string>
    <string name="modification">Modificación</string>
    <string name="serial_number">Nº de serie</string>
    <string name="name">Nombre</string>
    <string name="_new">Nuevo</string>
    <string name="paste_code_read">Pegar código leído</string>
    <string name="pos_total">#/#</string>
    <string name="pref_header_asset_control_conf">AssetControl Webservice</string>
    <string name="pref_header_image_control_conf">ImageControl</string>
    <string name="print_options">Impresión</string>
    <string name="print">Imprimir</string>
    <string name="printer">Impresora</string>
    <string name="printer_use_bt_default">Usar impresora Bluetooth</string>
    <string name="process">Procesar</string>
    <string name="remove">Quitar</string>
    <string name="area">Área</string>
    <string name="current_area">Área actual</string>
    <string name="original_area">Área original</string>
    <string name="previous_records">Registros anteriores</string>
    <string name="reentry">Reingresar</string>
    <string name="remove_images_cache">Eliminar caché de imágenes</string>
    <string name="remove_item">Quitar ítem</string>
    <string name="revised">Revisados</string>
    <string name="asset_review_finished">Revisión de activos finalizada</string>
    <string name="route">Ruta</string>
    <string name="routes">Rutas</string>
    <string name="skip">Saltar</string>
    <string name="skip_remaining">Saltar restantes</string>
    <string name="scanner_unavailable">Escáner no disponible</string>
    <string name="select_an_objective_for_data_collection">Seleccione un objetivo para la recolección de datos</string>
    <string name="select_item_category">Seleccionar categoría</string>
    <string name="send_data">Enviar datos</string>
    <string name="show_configuration_button">Mostrar botón configuración</string>
    <string name="show_configuration_button_summary">Mostrar el botón en la pantalla de ingreso</string>
    <string name="next">Siguiente</string>
    <string name="without_code">Sin código</string>
    <string name="without_category">Sin categoría</string>
    <string name="without_current_warehouse">Sin depósito actual</string>
    <string name="without_original_warehouse">Sin depósito original</string>
    <string name="without_description">Sin descripción</string>
    <string name="without_ean">Sin EAN</string>
    <string name="without_status">Sin estado</string>
    <string name="without_manufacturer">Sin fabricante</string>
    <string name="without_model">Sin modelo</string>
    <string name="without_serial_number">Sin número de serie</string>
    <string name="sin_rea_actual">Sin área actual</string>
    <string name="sin_rea_original">Sin área original</string>
    <string name="leftovers">Sobrantes</string>
    <string name="task">Tarea</string>
    <string name="maintenance_task">Tarea de mantenimiento</string>
    <string name="test">Probar</string>
    <string name="automatic_text_when_scanning">Texto automático al escanear</string>
    <string name="current_location">Ubicación actual</string>
    <string name="original_location">Ubicación original</string>
    <string name="user">Usuario</string>
    <string name="value">Valor</string>
    <string name="see_images">Ver imágenes</string>
    <string name="images">Imágenes</string>
    <string name="version">Version</string>
    <string name="wrong_user_password_combination">Combinación de usuario y contraseña incorrecta</string>
    <string name="you_must_select_a_user">Debe seleccionar un usuario</string>
    <string name="without_warehouse">Sin depósito</string>
    <string name="the_code_does_not_belong_to_any_asset_or_area_in_the_database">El código no pertenece a ningún activo
        fijo o área de depósito en la base de datos
    </string>
    <string name="the_code_belongs_to_an_area">El código pertenece a un área</string>
    <string name="remove_old_error_registries">Eliminar registros de errores antiguos</string>
    <string name="pref_header_asset_control_mant_conf">AssetControl Maintenance Webservice</string>
    <string name="general_configuration">Configuración general</string>
    <string name="data_collection">Recolección de datos</string>
    <string name="settings">Configuración</string>
    <string name="webservice_assetmaintenance_settings">Configuración del Webservice de mantenimiento</string>
    <string name="imagecontrol_webservice_settings">Configuración del Webservice de imágenes</string>
    <string name="webservice_settings">Configuración del Webservice principal</string>
    <string name="data_synchronization">Sincronización de datos</string>
    <string name="device_configuration_summary">Configuración de dispositivos, tipo de lector, impresora, NFC, RFID.
    </string>
    <string name="account_configuration_summary">Configuración de la cuenta y otras opciones de configuración automática
        de la aplicación
    </string>
    <string name="application_summary">Opciones generales de la aplicación</string>
    <string name="allow_quick_reviews">Permitir revisiones rápidas</string>
    <string name="allows_to_mark_assets_in_a_revision_by_clicking_on_the_list">Permite marcar activos en una revisión
        haciendo click sobre la lista
    </string>
    <string name="if_you_have_a_configuration_barcode_you_can_capture_it_here">Si dispone de un código de barras de
        configuración puede carpturarlo aquí
    </string>
    <string name="access_password_to_the_application_configuration">Contraseña de acceso a la configuración de la
        aplicación
    </string>
    <string name="configuration_password">Contraseña de configuración</string>
    <string name="capture_configuration_barcode">Capturar código de barras de configuración</string>
    <string name="reviews">Revisiones</string>
    <string name="access_to_configuration">Acceso a la configuración</string>
    <string name="auto_configuration">Configuración automática</string>
    <string name="sign_reviews_and_movements">Firmar revisiones y movimientos</string>
    <string name="save_occurred_errors_in_a_file">Registra en un archivo los errores ocurridos</string>
    <string name="allow_screen_rotation">Permitir rotación de pantalla</string>
    <string name="change_the_screen_orientation_when_rotating_the_device">Cambia la orientación de la pantalla al rotar
        el dispositivo
    </string>
    <string name="program_options">Opciones del programa</string>
    <string name="account_configuration">Configuración de la cuenta</string>
    <string name="pref_header_application">Aplicación</string>
    <string name="pref_header_devices">Dispositivos</string>
    <string name="filter_routes_by_description">Filtrar rutas por descripción</string>
    <string name="generate_configuration_qr_code">Generar código QR de configuración</string>
</resources>