<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                                      android:key="general_settings"
                                      android:title="@string/settings">
    <Preference
            android:id="@+id/application_settings"
            android:fragment="com.dacosys.assetControl.ui.fragments.settings.GeneralPreferenceFragment"
            android:icon="@drawable/ic_settings"
            android:summary="@string/application_summary"
            android:textColor="@color/triad4"
            android:title="@string/pref_header_application"/>
    <Preference
            android:id="@+id/account_settings"
            android:fragment="com.dacosys.assetControl.ui.fragments.settings.AccountPreferenceFragment"
            android:icon="@drawable/ic_account"
            android:summary="@string/account_configuration_summary"
            android:title="@string/account_configuration"/>
    <Preference
            android:id="@+id/devices_settings"
            android:fragment="com.dacosys.assetControl.ui.fragments.settings.DevicePreferenceFragment"
            android:icon="@drawable/ic_devices"
            android:summary="@string/device_configuration_summary"
            android:title="@string/pref_header_devices"/>
    <Preference
            android:id="@+id/sync_settings"
            android:fragment="com.dacosys.assetControl.ui.fragments.settings.DataSyncPreferenceFragment"
            android:icon="@drawable/ic_sync_settings"
            android:summary="@string/data_synchronization"
            android:title="@string/pref_header_data_sync"/>
    <Preference
            android:id="@+id/webservice_settings"
            android:fragment="com.dacosys.assetControl.ui.fragments.settings.WebservicePreferenceFragment"
            android:icon="@drawable/ic_server"
            android:summary="@string/webservice_settings"
            android:title="@string/pref_header_asset_control_conf"/>
    <Preference
            android:id="@+id/imagecontrol_settings"
            android:fragment="com.dacosys.assetControl.ui.fragments.settings.ImageControlPreferenceFragment"
            android:icon="@drawable/ic_imagecontrol"
            android:summary="@string/imagecontrol_webservice_settings"
            android:title="@string/pref_header_image_control_conf"/>
    <Preference
            android:id="@+id/sync_assetmaintenance"
            android:fragment="com.dacosys.assetControl.ui.fragments.settings.MaintenancePreferenceFragment"
            android:icon="@drawable/ic_assetmaintenance"
            android:summary="@string/webservice_assetmaintenance_settings"
            android:title="@string/pref_header_asset_control_mant_conf"/>
</androidx.preference.PreferenceScreen>
